test_suite/tests/ui/borrow/wrong_lifetime.rs
#[macro_use]
extern crate serde_derive;

#[derive(Deserialize)]
struct Test<'a> {
    #[serde(borrow = "'b")]
    s: &'a str,
}

fn main() {}
